--- a/index.html
+++ b/index.html
@@ -7,8 +7,56 @@
 </head>
 <body>
   <div class="app">
+    <div class="info">
+      <h4>Koala song to Ableton Live set converter v1 alpha</h4>
+      <p>
+        !!! EARLY EARLY ALPHA VERSION, USE AT YOUR OWN RISK !!!<br> 
+      </p>
+      <p>
+        - Choose a .koala file or drag it below - it will be converted to .ablbundle, that
+        you can open in Ableton Live 
+      </p>
+      <p>
+        - This script uses Ableton Note mobile app's JSON format for the conversion. If you try to open the file on mobile in Ableton Note, it will not work correctly
+      </p>
+    </div>
     <div class="control-wrapper">
       <input type="file" class="file-input" name="file_picker" required>
+    </div>
+    <div class="info">
+      <h4>Supported features</h4>
+        <table>
+          <tr>
+            <th>Feature</th><th>Supported</th><th>Not supported</th>
+          </tr>
+          <tr>
+            <td>Sample pads</td><td>✅</td><td></td>
+          </tr>
+          <tr>
+            <td>Quokka pads</td><td>✅ (->Drift)</td><td></td>
+          </tr>
+          <tr>
+            <td>Sequences</td><td>✅</td><td></td>
+          </tr>
+          <tr>
+            <td>EQ (samples)</td><td></td><td>❌</td>
+          </tr>
+          <tr>
+            <td>Stretch (samples)</td><td></td><td>❌</td>
+          </tr>
+          <tr>
+            <td>Mixer</td><td></td><td>❌</td>
+          </tr>
+          <tr>
+            <td>FX</td><td></td><td>❌</td>
+          </tr>
+          <tr>
+            <td>Mix buses</td><td></td><td>❌</td>
+          </tr>
+          <tr>
+            <td>Midi out pads</td><td></td><td>❌</td>
+          </tr>
+        </table>
     </div>
   </div>
   <script type="module" src="js/main.js"></script>
