Add feedback link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="info">
       <h4>Koala song to Ableton Live set converter v1 alpha</h4>
       <p>
-        !!! EARLY EARLY ALPHA VERSION, USE AT YOUR OWN RISK !!!<br> 
+        !!! EARLY EARLY ALPHA VERSION, USE AT YOUR OWN RISK !!!<br>
+        This is a third-party unofficial script, with no affiliation to Elf Audio or Ableton
       </p>
       <p>
         - Choose a .koala file or drag it below - it will be converted to .ablbundle, that
@@ -18,6 +19,9 @@
       </p>
       <p>
         - This script uses Ableton Note mobile app's JSON format for the conversion. If you try to open the file on mobile in Ableton Note, it will not work correctly
+      </p>
+      <p>
+        Feedback: <a href="https://github.com/eeropic/koala2abl/issues">https://github.com/eeropic/koala2abl/issues</a>
       </p>
     </div>
     <div class="control-wrapper">
