adjust crude styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="info">
       <h4>Supported features</h4>
-        <table>
+        <table class="features">
           <tr>
             <th>Feature</th><th>Supported</th><th>Not supported</th>
           </tr>
