Add support for mix buses

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
             <td>Sequences</td><td>✅</td><td></td>
           </tr>
           <tr>
+            <td>Master channel effects</td><td>✅</td><td></td>
+          </tr>
+          <tr>
             <td>EQ (samples)</td><td></td><td>❌</td>
           </tr>
           <tr>
             <td>Stretch (samples)</td><td></td><td>❌</td>
-          </tr>
-          <tr>
-            <td>Mixer</td><td></td><td>❌</td>
           </tr>
           <tr>
             <td>FX</td><td></td><td>❌</td>
