Add note on supported effect devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </p>
       <p>
         - Choose a .koala file or drag it below - it will be converted to .ablbundle, that
-        you can open in Ableton Live 
+        you can open in Ableton Live. It will not sound exactly the same, as the device parameter ranges differ.
       </p>
       <p>
         - This script uses Ableton Note mobile app's JSON format for the conversion. If you try to open the file on mobile in Ableton Note, it will not work correctly
@@ -43,7 +43,10 @@
             <td>Sequences</td><td>✅</td><td></td>
           </tr>
           <tr>
-            <td>Master channel effects</td><td>✅</td><td></td>
+            <td>Master channel effects*</td><td>✅</td><td></td>
+          </tr>
+          <tr>
+            <td>Mix buses*</td><td>✅</td><td></td>
           </tr>
           <tr>
             <td>EQ (samples)</td><td></td><td>❌</td>
@@ -52,16 +55,15 @@
             <td>Stretch (samples)</td><td></td><td>❌</td>
           </tr>
           <tr>
-            <td>FX</td><td></td><td>❌</td>
-          </tr>
-          <tr>
-            <td>Mix buses</td><td></td><td>❌</td>
+            <td>Performance FX</td><td></td><td>❌</td>
           </tr>
           <tr>
             <td>Midi out pads</td><td></td><td>❌</td>
           </tr>
         </table>
-    </div>
+        <p>*Supported devices:</p>
+        <p>EQ, CHORUS, DELAY, COMPRESSOR, FLANGER, BITCOOKER, FREEVERB, DRIVE, LIMITER</p>
+      </div>
   </div>
   <script type="module" src="js/main.js"></script>
 </body>
