:star: Add support for pad channel EQs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <td>Mix buses*</td><td>✅</td><td></td>
           </tr>
           <tr>
-            <td>EQ (samples)</td><td></td><td>❌</td>
+            <td>EQ (samples)</td><td>✅</td><td></td>
           </tr>
           <tr>
             <td>Stretch (samples)</td><td></td><td>❌</td>
