:star: Add swing support

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <td>Sequences</td><td>✅</td><td></td>
           </tr>
           <tr>
+            <td>Swing</td><td>✅</td><td></td>
+          </tr>
+          <tr>
             <td>Master channel effects*</td><td>✅</td><td></td>
           </tr>
           <tr>
