--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       <h4>Supported features</h4>
         <table class="features">
           <tr>
-            <th>Feature</th><th>Supported</th><th>Not supported</th>
+            <th>Feature</th><th>Supported</th><th>Not supported</th><th>Notes</th>
           </tr>
           <tr>
-            <td>Sample pads</td><td>✅</td><td></td>
+            <td>Sample pads</td><td>✅</td><td></td><td>Looping not supported</td>
           </tr>
           <tr>
             <td>Quokka pads</td><td>✅ (->Drift)</td><td></td>
