Swap pad row ordering to match Live drumracks by default, add support for CLIPPER

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     </div>
     <div class="control-wrapper">
       <input type="file" class="file-input" name="file_picker" required>
+      <label>
+        <input id="use-live-pad-ordering" type="checkbox" checked="true">
+        Use Live pad row ordering
+    </label>
+            <img src="assets/pad-order.svg" width="160">
     </div>
+
     <div class="info">
       <h4>Supported features</h4>
         <table class="features">
